# ants

./: .gitignore  AGENTS.md  Cargo.toml  LICENCE.md  PROJECT.md  README.md
crates/ants-cli/: Cargo.toml
crates/ants-cli/src/: main.rs
crates/ants-core/: Cargo.toml
crates/ants-core/src/: lib.rs  mesh.rs
crates/ants-network/: Cargo.toml
crates/ants-network/src/: behaviour.rs  event_loop.rs  lib.rs  node.rs
crates/ants-observability/: Cargo.toml
crates/ants-observability/src/: lib.rs
crates/ants-orchestrator/: Cargo.toml
crates/ants-orchestrator/src/: lib.rs
crates/ants-worker/: Cargo.toml
crates/ants-worker/src/: lib.rs
examples/math-brute/: README.md
examples/raytracer/: README.md
