[workspace]
resolver = "3"
members = [
    "crates/ants-core",
    "crates/ants-network",
    "crates/ants-worker",
    "crates/ants-observability",
    "crates/ants-orchestrator",
    "crates/ants-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/rubbiekelvin/ants"
authors = ["rubbiekelvin <dev.rubbie+ants@gmail.com>"]

[workspace.dependencies]
ants-core = { path = "crates/ants-core" }
ants-network = { path = "crates/ants-network" }
ants-worker = { path = "crates/ants-worker" }
ants-observability = { path = "crates/ants-observability" }
ants-orchestrator = { path = "crates/ants-orchestrator" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
libp2p = { version = "0.56", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "request-response",
    "cbor",
    "macros",
] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "signal",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
