[package]
name = "ants-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line entrypoint for the ants distributed mesh scheduler."

[[bin]]
name = "ants"
path = "src/main.rs"

[dependencies]
ants-core = { workspace = true }
ants-network = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
